@@ -15,38 +15,44 @@ import com.appli.clcapi.payments.invoicePayments.confirmPayments.dto.ConfirmPaym
 import com.appli.clcapi.payments.invoicePayments.confirmPayments.entity.ConfirmPaymentsEntity;
 import com.appli.clcapi.payments.invoicePayments.confirmPayments.repository.ConfirmPaymentsRepo;
 import com.appli.clcapi.payments.invoicePayments.confirmPayments.service.ConfirmPaymentsService;
-
+import com.appli.clcapi.payments.invoicePayments.receipt.dto.ConfirmSalesInvoiceReceiptDto;
+import com.appli.clcapi.payments.invoicePayments.receipt.entity.ConfirmSalesInvoiceReceiptEntity;
+import com.appli.clcapi.payments.invoicePayments.receipt.repository.ConfirmSalesInvoiceReceiptRepo;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
 import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
 public class ConfirmPaymentsImple implements ConfirmPaymentsService {
 
-    private final ConfirmPaymentsRepo confirmPaymentsRepo;
+    private final ConfirmPaymentsRepo confirmSalesInvoicePaymentsRepo;
     private final ConfirmInvoiceRepo confirmInvoiceRepo;
     private final ConfirmCardRepo confirmCardRepo;
     private final ConfirmCashRepo confirmCashRepo;
     private final ConfirmChequeRepo confirmChequeRepo;
+    private final ConfirmSalesInvoiceReceiptRepo confirmSalesInvoiceReceiptRepo;
 
     @Override
     @Transactional
-   public NonPaginatedResponse addConfirmInvoiceToConfirmPayments(ConfirmPaymentsDto confirmPaymentsDto) {
+    public NonPaginatedResponse makePaymentToConfirmInvoice(ConfirmPaymentsDto confirmPaymentsDto) {
         NonPaginatedResponse response = new NonPaginatedResponse();
+        Date now = new Date();
         try {
             ConfirmPaymentsEntity aPayment = ConfirmPaymentsEntity.builder()
                     .paymentId(confirmPaymentsDto.getPaymentId())
                     .paymentType(confirmPaymentsDto.getPaymentType())
                     .paidAmount(confirmPaymentsDto.getPaidAmount())
-                    .paidDate(confirmPaymentsDto.getPaidDate())
+                    .paidDate(now)
                     .confirmInvoice(new ConfirmInvoiceEntity(confirmPaymentsDto.getConfirmInvoiceDto()))
                     .build();
-            var savedPaymentEntity =  confirmPaymentsRepo.save(aPayment);
+            var savedPaymentEntity = confirmSalesInvoicePaymentsRepo.save(aPayment);
 
             addDetailsToTheRelevantPayMethod(confirmPaymentsDto, savedPaymentEntity);
 
@@ -54,15 +60,15 @@ public class ConfirmPaymentsImple implements ConfirmPaymentsService {
             double totalPaidAmount = selectedConfirmedInvoice.get().getPaidAmount() + confirmPaymentsDto.getPaidAmount();
             selectedConfirmedInvoice.get().setPaidAmount(totalPaidAmount);
 
-            if(totalPaidAmount == (selectedConfirmedInvoice.get().getNetAmount())){
+            if (totalPaidAmount == (selectedConfirmedInvoice.get().getNetAmount())) {
                 selectedConfirmedInvoice.get().setIsComplete(true);
                 confirmInvoiceRepo.save(selectedConfirmedInvoice.get());
             }
-
-            response.setResult(confirmPaymentsDto);
+            ConfirmSalesInvoiceReceiptEntity aReceipt = addToConfirmSalesInvoiceReceipt(confirmPaymentsDto, selectedConfirmedInvoice.get());
+            ConfirmSalesInvoiceReceiptDto aReceiptDto = new ConfirmSalesInvoiceReceiptDto(aReceipt);
+            response.setResult(aReceiptDto);
             response.setSuccessMessage(PaymentsConstants.PAYMENT_HAS_BEEN_ADDED);
             response.setStatus(HttpStatus.CREATED);
-
         } catch (Exception e) {
             response.setSuccessMessage(null);
             response.setErrors(Arrays.asList("An error occurred"));
@@ -71,9 +77,20 @@ public class ConfirmPaymentsImple implements ConfirmPaymentsService {
         return response;
     }
 
+    private ConfirmSalesInvoiceReceiptEntity addToConfirmSalesInvoiceReceipt(ConfirmPaymentsDto confirmPaymentsDto, ConfirmInvoiceEntity confirmInvoice) {
+        ConfirmSalesInvoiceReceiptEntity aReceipt = ConfirmSalesInvoiceReceiptEntity.builder()
+                .confirmInvoiceEntity(confirmInvoice)
+                .paymentType(confirmPaymentsDto.getPaymentType())
+                .paidAmount(confirmPaymentsDto.getPaidAmount())
+                .paidDate(confirmPaymentsDto.getPaidDate())
+                .build();
+        ConfirmSalesInvoiceReceiptEntity savedReceipt =  confirmSalesInvoiceReceiptRepo.save(aReceipt);
+        return savedReceipt;
+    }
+
     private void addDetailsToTheRelevantPayMethod(ConfirmPaymentsDto confirmPaymentsDto, ConfirmPaymentsEntity savedPayment) {
 
-        if(confirmPaymentsDto.getPaymentType().equalsIgnoreCase("card")){
+        if (confirmPaymentsDto.getPaymentType().equalsIgnoreCase("card")) {
             ConfirmCardEntity aCardPayment = ConfirmCardEntity.builder()
                     .cardRefNo(confirmPaymentsDto.getCardRefNo())
                     .paidAmount(confirmPaymentsDto.getPaidAmount())
@@ -90,7 +107,7 @@ public class ConfirmPaymentsImple implements ConfirmPaymentsService {
                     .confirmInvoiceEntity(savedPayment.getConfirmInvoice())
                     .build();
             confirmCashRepo.save(aCashPayment);
-        }else if (confirmPaymentsDto.getPaymentType().equalsIgnoreCase("cheque")){
+        } else if (confirmPaymentsDto.getPaymentType().equalsIgnoreCase("cheque")) {
             ConfirmChequeEntity aChequePayment = ConfirmChequeEntity.builder()
                     .paidAmount(confirmPaymentsDto.getPaidAmount())
                     .paidDate(confirmPaymentsDto.getPaidDate())
@@ -112,30 +129,28 @@ public class ConfirmPaymentsImple implements ConfirmPaymentsService {
     @Override
     public NonPaginatedResponse updatePayment(ConfirmPaymentsDto confirmPaymentsDto) {
         return null;
-    }
+    }*/
 
     @Override
-    public NonPaginatedResponse getAllPayments(Long invoiceId) {
+    public NonPaginatedResponse getAllConfirmPaymentsOfConfirmInvoice(Long confirmSalesInvoiceId) {
         NonPaginatedResponse response = new NonPaginatedResponse();
-        try{
-            List<ConfirmPaymentsEntity> paymentsEntities = paymentsRepo.findBySalesInvoice_TempInvoiceId(invoiceId);
-            List<ConfirmPaymentsDto> confirmPaymentsDtos = new ArrayList<>();
-            for (ConfirmPaymentsEntity aPay :paymentsEntities){
-                ConfirmPaymentsDto aPaymentDto = new ConfirmPaymentsDto(aPay);
-                confirmPaymentsDtos.add(aPaymentDto);
-            }
-            response.setResult(confirmPaymentsDtos);
-            response.setStatus(HttpStatus.OK);
-            response.setSuccessMessage("Data is retrieved");
-        }catch (Exception e){
-            response.setStatus(HttpStatus.BAD_REQUEST);
-            response.setErrors(Arrays.asList("Couldn't find anything"));
+        try {
+            List<ConfirmPaymentsEntity> confirmedSalesInvoicePaymentRecords = confirmSalesInvoicePaymentsRepo.findByConfirmInvoice_ConfirmInvoiceId(confirmSalesInvoiceId);
+            List<ConfirmPaymentsDto> aConfirmedSalesInvoicePayment = confirmedSalesInvoicePaymentRecords.stream()
+                    .map(ConfirmPaymentsDto::new)
+                    .toList();
+
+            response.setResult(aConfirmedSalesInvoicePayment);
+            response.setStatus(HttpStatus.ACCEPTED);
+            response.setSuccessMessage("Payment Records for the confirm sales invoice are Retrieved!");
+        } catch (Exception e) {
+            e.printStackTrace();
+            response.setErrors(List.of("Couldn't retrieve the Payment Records for the confirm sales invoice!"));
         }
         return response;
-        return null;
     }
 
-    @Override
+   /* @Override
     public NonPaginatedResponse selectA_Payment() {return null;}*/
 
 }
